<resources>
    <string name="ACTION_RETRY">Retry</string>
    <string name="ACTION_CANCEL">Cancel</string>
    <string name="ACTION_OK">OK</string>
    <string name="ACTION_YES">YES</string>
    <string name="ACTION_NO">NO</string>
    <string name="msg_error_get_info">Get information app false.</string>
    <string name="text_new_book">Tài liệu mới</string>
    <string name="text_view_more">Xem Thêm</string>
    <string name="text_collection_recommend">Tài liệu khuyên đọc</string>
    <string name="text_ebook_new">Tài liệu điện tử mới</string>
    <string name="msg_error_get_list_book">Lấy thông tin danh sách sách thất bại bạn làm ơn kiểm tra lại</string>
    <string name="title_book_detail">Chi tiết sách</string>
    <string name="msg_error_get_list_book_related">Lấy danh sách sách liên quan thất bại</string>
    <string name="text_read_book">Đọc sách</string>
    <string name="text_borrow">Đặt mượn</string>
    <string name="text_book_related">Sách liên quan</string>
    <string name="msg_error_get_list_new_news">Lấy danh sách tin tức thất bại. Bạn làm ơn kiểm tra lại.</string>
    <string name="title_news_detail">Tin tức</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_user_name">Tên đăng nhập</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_forgot_password">Quên mật khẩu</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_skip">Bỏ qua</string>
    <string name="msg_error_login">Đăng nhập thất bại. Bạn làm ơn kiểm tra lại.</string>
    <string name="text_search">Tìm sách…</string>
    <string name="text_search_title">Tìm kiếm</string>
    <string name="text_book">Sách</string>
    <string name="text_ebook">Sách điện tử</string>
    <string name="text_thesis">Luận văn</string>
    <string name="text_speak_book">Sách nói</string>
    <string name="text_movie">Phim ảnh</string>
    <string name="text_picture">Hình ảnh</string>
    <string name="text_no_result">Không tìm thấy cuốn sách nào.</string>
    <string name="searchhint">Điền từ để tìm</string>
    <string name="cancel">Hủy</string>
    <string name="searchmore">Tìm Thêm</string>
    <string name="searchfound">Tìm</string>
    <string name="searchfinished">Tìm kiếm kết thúc</string>
    <string name="contents" translatable="false">Nội dung</string>
    <string name="chara" translatable="false">A</string>
    <string name="bookmark" translatable="false">đánh dấu</string>
    <string name="highlight" translatable="false">tô đậm</string>
    <string name="delete" translatable="false">xóa</string>
    <string name="msg_error_download_book">Tải sách thất bại</string>
    <string name="ic_information_user">Thông tin</string>
    <string name="text_change_password">Thay mật khẩu</string>
    <string name="text_download">Tải về</string>
    <string name="text_gia_han">Gia hạn</string>
    <string name="text_notify">Thông báo</string>
    <string name="text_muon_tra">Mượn trả</string>
    <string name="text_infomation">Thông tin</string>
    <string name="msg_error_get_user_info">Lấy thông tin người dùng thất bại</string>
    <string name="msg_error_logout">Đăng xuất thất bại</string>
    <string name="text_search_advance">Tìm kiếm nâng cao</string>
    <string name="text_nhan_de">Nhan để</string>
    <string name="text_tact_gia">Tác giả</string>
    <string name="text_tu_khoa">Từ khóa</string>
    <string name="text_ngon_ngu">Ngôn ngữ</string>
    <string name="txt_search_advance">Tìm Kiếm</string>
    <string name="msg_reservation_success">Mượn sách thành công.</string>
    <string name="msg_reservation_fail">Số thẻ đã bị hết hạn.</string>
    <string name="msg_download_book_success">Tải sách thành công</string>
    <string name="text_borrow_book">Mượn trả</string>
    <string name="text_dang_muon">Đang mượn</string>
    <string name="text_da_muon">Đã mượn</string>
    <string name="msg_error_get_list_book_borrow">Lấy thông tin danh sách mượn thất bại</string>
    <string name="text_khong_co_cuon_sach_nao">Không có cuốn sách nào</string>
    <string name="msg_error_read_message_fail">Cập nhật trạng thái đã đọc thất bại.</string>
    <string name="text_no_message">Bạn không có thông báo</string>
    <string name="check_double_click_exit_app">Nhấn nút Back hai lần để thoát ứng dụng.</string>
    <string name="text_change_pass">Thay đổi mật khẩu</string>
    <string name="text_confirm_pass">Xác nhận mật khẩu</string>
    <string name="text_new_pass">Mật khẩu mới</string>
    <string name="text_old_pass">Mật khẩu cũ</string>
    <string name="text_about">About</string>
    <string name="text_content_about" translatable="false">
        <h2> DGSoft Technologies JSC © Emiclib 2017. All Rights Reserved</h2>
        <br/>
        <p>Tầng M Tòa nhà VTC, Số 132 Cộng Hòa - Phường 4 - Quận Tân Bình - Tp. Hồ Chí Minh.</p>
        <p>Văn phòng: 138/7 Duy Tân, Phường 15, Quận Phú Nhuận, TP Hồ Chí Minh.</p>
        <p>(84-8 3 847 5821)</p>
        <p>info@dgsoft.vn</p>
    </string>

    <string name="msg_warning_confirm_pass_fail">Xác nhận mật khẩu mới sai</string>
    <string name="msg_change_pass_success">Thay đổi mật khẩu thành công</string>
    <string name="msg_change_pass_fail">Thay đổi mật khẩu thất bại</string>
    <string name="text_renew">Gia hạn</string>
    <string name="msg_change_get_list_book_renew_fail">Lấy danh sách gia hạn thất bại</string>
    <string name="msg_change_renew_success">Gia hạn thành công</string>
    <string name="msg_change_renew_fail">Gia hạn thất bại</string>
    <string name="text_more">Nhiều hơn</string>
    <string name="text_feedback">Phản hồi</string>
    <string name="fqa">FQA</string>
    <string name="text_about_me">Về chúng tôi</string>
    <string name="msg_error_get_list_fqa">Lấy danh sách câu hỏi và trả lời thất bại.</string>
    <string name="text_title">Nhan đề *</string>
    <string name="text_email">Email</string>
    <string name="text_user_name_hint">Tên của bạn</string>
    <string name="text_phone_number">Số điện thoại</string>
    <string name="text_content">Nội dung</string>
    <string name="msg_error_feedback">Gửi phản hồi thất  bại.</string>
    <string name="msg_send_feedback_success">Gửi phản hồi thành công. Cảm ơn bạn về phản hổi này</string>
    <string name="msg_warning_email_empty">Bạn chưa điền email cho phản hồi</string>
    <string name="msg_warning_content_empty">Bạn chưa điền nội dung cho phản hồi</string>
    <string name="text_dat_cho">Đặt chỗ</string>
    <string name="text_dat_muon">Đặt mượn</string>
    <string name="layout">Sách</string>
    <string name="doublepaged">Trang đôi</string>
    <string name="lockrotation">Xoay</string>
    <string name="globalPagination">Đánh dấu trang</string>
    <string name="theme">Chủ đề</string>
    <string name="pagetransitioneffect">Chuyển trang</string>
    <string name="noneeffect">Không hiệu ứng</string>
    <string name="slideeffect">Hiệu ứng trượt</string>
    <string name="curleffect">Hiệu ứng cuộn</string>
    <string name="voice">Voice</string>
    <string name="mediaoverlay">MediaOverlay</string>
    <string name="tts">Text To Speech</string>
    <string name="autostartplaying">Auto Start Playing</string>
    <string name="autoloadnewchapter">Auto Load New Chapter</string>
    <string name="highlighttexttoVoice">Highlight Text To Voice</string>
    <string name="information">Information</string>
    <string name="reader">SkyReader version 1.0</string>
    <string name="skyepub">Powered By SkyEpub for Android</string>
    <string name="text_setting">Cài đặt</string>
    <string name="warning">Warning</string>

    <string name="globalpaginationwarning">Global Pagination enables to show the page number for the entire of book.\n
It may take long time to finish the calculation of pages for whole book.\n
Whenever font name or font size are changed, Global Pagination tries to calculate the total page number again.\n
while the Global Pagination is going on, some user interfaces will be restricted to use.</string>
    <string name="text_book_download">Sách tải xuống</string>
    <string name="msg_error_get_list_book_download">Lấy danh sách sách tải xuống thất bại</string>
    <string name="text_no_question_answer">Chưa có câu hỏi và trả lời</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_news">Tin tức</string>


    <string name="msg_reservation_fail_number_card">Số thẻ hoặc mật khẩu không hợp lệ.</string>
    <string name="msg_reservation_fail_request_exist">Yêu cầu này đã tồn tại.</string>
    <string name="msg_reservation_fail_except">Bạn đang mượn tài liệu này.</string>
    <string name="msg_reservation_fail_full">Bạn không có quyền mượn tài liệu này.</string>
    <string name="msg_reservation_fail_not_Invalid">Đăng ký cá biệt không hợp lệ.</string>
    <string name="msg_reservation_fail_free">không có tài liệu rỗi.</string>
    <string name="msg_reservation_fail_nomal">Đặt mượn sách thất bại.</string>
    <string name="TITLE_ERROR">Lỗi</string>
    <string name="text_title_author_empty">Bạn hãy nhập nhan đề hoặc tác giả để tìm kiếm!</string>
    <string name="msg_warning_link_download_empty">Sách không có đường dẫn tải.</string>
    <string name="text_download_book">Tải sách</string>
    <string name="text_request_document">Yêu cầu bổ sung tài liệu</string>
    <string name="btn_text_request_document">Yêu cầu</string>
    <string name="text_full_name">Họ và Tên</string>
    <string name="text_patron_code">Số thẻ</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_supplier">Đơn vị</string>
    <string name="text_groupN_name">Tên Nhóm</string>
    <string name="text_author">Tác giả</string>
    <string name="text_publisher">Nhà xuất bản</string>
    <string name="text_publish_year">Năm xuất bản</string>
    <string name="text_information">Các thông tin khác</string>
    <string name="msg_request_document_success">Gửi yêu cầu bổ sung tài liệu thành công!</string>
    <string name="msg_request_document_fail">Gửi yêu cầu bổ sung tài liệu thất bại!</string>
    <string name="title_share_book">Chia sẽ sách</string>
    <string name="msg_reserver_fail_nomal">Đặt chỗ thất bại!</string>
    <string name="msg_reserver_success">Đặt chỗ thành công!</string>
    <string name="msg_reserver_fail">Yêu cầu này đã tồn tại.</string>
    <string name="msg_warning_read_book" translatable="false">Hiện sách này chưa có tài liệu.</string>
    <string name="text_title_audios" translatable="false">Danh sách các phần</string>
    <string name="text_title_home" translatable="false">Trang chủ</string>
    <string name="text_title_search" translatable="false">Tìm kiếm</string>
    <string name="text_title_profile" translatable="false">Tài khoản</string>
    <string name="text_title_setting" translatable="false">Nhiều hơn</string>
    <string name="text_search_book">Tra cứu sách</string>
    <string name="text_borrow_books">Mượn sách</string>
    <string name="text_return_book">Trả sách</string>
    <string name="title_booth">Địa điểm các Booth</string>


</resources>
