<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/text_title_home" />

<!--    <item-->
<!--        android:id="@+id/navigation_news"-->
<!--        android:icon="@drawable/ic_news"-->
<!--        android:title="@null" />-->

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/text_title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_title_profile" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_more_horiz"
        android:title="@string/text_title_setting" />

</menu>
